service.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-srv
spec:
  selector:
    app: motd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
